--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc"
   },
-  "peerDependencies": {
+  "dependencies": {
     "typescript": "^5",
     "elysia": "^1.3.5",
     "bullmq": "^5.56.4",
