--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elysia-bullmq",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publishConfig": {
     "access": "public"
   },
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "typescript": "^5",
+    "bullmq": "^5.56.4"
+  },
+  "peerDependencies": {
     "elysia": "^1.3.5",
-    "bullmq": "^5.56.4",
     "ioredis": "^5.6.1"
   }
 }
