--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "elysia-bullmq",
-  "version": "0.0.2",
+  "name": "elysia-irismq",
+  "version": "0.0.3",
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
