--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "elysia-irismq",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "publishConfig": {
     "access": "public"
   },
   "files": [
     "dist"
   ],
+  "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "src/index.ts",
