--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elysia-irismq",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "publishConfig": {
     "access": "public"
   },
@@ -13,14 +13,19 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
-    "typescript": "^5",
+    "typescript": "^5.8.3",
     "bullmq": "^5.56.4"
   },
   "peerDependencies": {
     "elysia": "^1.3.5",
     "ioredis": "^5.6.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
