--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "elysia-irismq",
-  "version": "0.1.2",
-  "publishConfig": {
-    "access": "public"
-  },
-  "files": [
-    "dist"
-  ],
-  "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "module": "src/index.ts",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
-  },
-  "dependencies": {
-    "typescript": "^5.8.3",
-    "bullmq": "^5.56.4"
-  },
-  "peerDependencies": {
-    "elysia": "^1.3.5",
-    "ioredis": "^5.6.1"
-  },
-  "devDependencies": {
-    "prettier": "^3.6.2"
-  }
+	"name": "elysia-irismq",
+	"version": "0.2.0",
+	"publishConfig": {
+		"access": "public"
+	},
+	"files": [
+		"dist"
+	],
+	"license": "MIT",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"module": "src/index.ts",
+	"type": "module",
+	"scripts": {
+		"build": "tsc",
+		"format": "prettier --write .",
+		"format:check": "prettier --check .",
+		"publish": "npm run format && npm run build && npm publish"
+	},
+	"dependencies": {
+		"typescript": "^5.8.3",
+		"bullmq": "^5.56.4"
+	},
+	"peerDependencies": {
+		"elysia": "^1.3.5",
+		"ioredis": "^5.6.1"
+	},
+	"devDependencies": {
+		"prettier": "^3.6.2"
+	}
 }
